--- a/locales/id.json
+++ b/locales/id.json
@@ -19,6 +19,7 @@
     },
     "About": {
         "title": "Tentang",
+        "metaDesc": "Temukan lebih dalam tentang Dwi Wijaya, seorang Fullstack Developer berpengalaman dengan keterampilan coding web, desain UI/UX, dan pengembangan aplikasi. Mari kita kenal lebih dekat!",
         "subtitle": "Ayo, kenali saya lebih dekat dan temukan lebih banyak di balik CV saya.",
         "journeyTitle": "Perjalanan Saya",
         "valuesTitle": "Nilai dan Filosofi",
@@ -30,10 +31,12 @@
     },
     "Services": {
         "title": "Layanan",
+        "metaDesc": "Jelajahi layanan khusus yang ditawarkan Dwi Wijaya, mulai dari pengembangan web, pengembangan aplikasi, UI/UX, design, hingga konsultasi. Solusi yang disesuaikan untuk mewujudkan visi digital Anda.",
         "subtitle": "Temukan layanan khusus yang saya tawarkan untuk klien."
     },
     "Contact": {
         "title": "Hubungi Saya",
+        "metaDesc": "Hubungi Dwi Wijaya untuk kolaborasi atau pertanyaan. Terhubung melalui media sosial atau kirim pesan langsung.",
         "subtitle": "Ayo, hubungi saya dan mulailah percakapan tentang kemungkinan kerja sama atau pertanyaan Anda.",
         "findSocial": "Temukan saya di media sosial",
         "orsendMsg": "Atau kirimkan pesan kepada saya",
@@ -47,10 +50,12 @@
     },
     "Guestbook": {
         "title": "Buku Tamu",
+        "metaDesc": "Bagikan pemikiran, saran, atau pertanyaan Anda di buku tamu. Mari kita lanjutkan percakapan!",
         "subtitle": "Tinggalkan apapun yang ingin kamu katakan, saran, pertanyaan atau apapun!"
     },
     "Blog": {
         "title": "Blog",
+        "metaDesc": "Temukan artikel tentang kode, kreativitas, dan pembelajaran dari Dwi Wijaya. Wawasan dan pembaruan dari perjalanan seorang Dwi Wijaya.",
         "subtitle": "Menjelajahi dunia kode, kreativitas, dan pembelajaran tanpa henti."
     },
     "Common": {
@@ -59,6 +64,7 @@
     },
     "Dashboard": {
         "title": "Dasbor",
+        "metaDesc": "Jelajahi dashboard pribadi Dwi Wijaya yang menampilkan wawasan kecepatan halaman, kontribusi GitHub, dan kemajuan LeetCode.",
         "subtitle": "Ini adalah dashboard personal website saya dibuat dengan serverless function.",
         "pagespeedSubtitle": "Indeks kecepatan halaman saya oleh Google API",
         "githubSubtitle": "Kontribusi saya dari tahun lalu di Github.",
@@ -66,20 +72,24 @@
     },
     "Skillset": {
         "title": "Keahlian",
+        "metaDesc": "Temukan keterampilan teknis Dwi Wijaya, alat profesional, dan sertifikat yang menunjukkan keahliannya dalam pengembangan Full-stack.",
         "subtitle": "Jelajahi terkait keahlian teknis dan alat profesional saya.",
         "certificateTitle": "Sertifikasi",
         "certificateSubtitle": "Beberapa showcase sertifikat professional saya."
     },
     "Experience": {
         "title": "Pengalaman",
+        "metaDesc": "Jelajahi latar belakang profesional Dwi Wijaya yang menampilkan pengalaman utama dan pencapaian kariernya.",
         "subtitle": "Temukan latar belakang profesional dan pengalaman berharga saya."
     },
     "Portfolio": {
         "title": "Portofolio",
+        "metaDesc": "Telusuri portofolio Dwi Wijaya yang menampilkan proyek terbaru dan pencapaian kreatifnya dalam pengembangan web, pengembangan aplikasi, desain UI/UX, Design dan lainnya.",
         "subtitle": "Jelajahi proyek dan karya terbaru saya."
     },
     "Privacy": {
         "title": "Kebijakan Privasi",
+        "metaDesc": "Pahami praktik privasi di situs web Dwi Wijaya, termasuk pengumpulan data, penggunaan, dan langkah-langkah keamanan.",
         "subtitle": "Kebijakan privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi Anda.",
         "information_collected": "Kami mengumpulkan informasi yang Anda berikan kepada kami secara langsung, seperti nama dan alamat email Anda.",
         "usage": "Kami menggunakan informasi ini untuk meningkatkan layanan kami dan berkomunikasi dengan Anda.",
@@ -94,6 +104,7 @@
     },
     "Offline": {
         "title": "Anda Sedang Offline",
+        "metaDesc": "Anda sedang offline. Silakan periksa koneksi internet Anda dan coba lagi untuk mengakses konten situs web.",
         "subtitle": "Koneksi internet tidak terdeteksi.",
         "message": "Sepertinya Anda sedang offline. Periksa koneksi internet Anda dan coba lagi.",
         "retry": "Coba Lagi"
