fix: homepage structure

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,8 +9,8 @@
         "greeting": "Hello everyone",
         "iam": "I'm",
         "based": "Based on Yogyakarta, ID",
-        "introduction": "I'm a Full-stack developer",
-        "passion": "Passionate about crafting seamless web experiences, I specialize in building efficient, scalable, and attractive web applications.",
+        "introduction": "Experienced Full-stack Developer",
+        "passion": "I am passionate about creating seamless web experiences. Specializing in building efficient, scalable, and engaging web applications, I focus on delivering digital solutions that are not only functional but also visually appealing.",
         "motto": "Bringing digital dreams to life.",
         "collaboration": "Let's collaborate!",
         "freelance": "I'm open for freelance work. Don't hesitate to contact me if you want to work together.",
