fix: en based homepage

--- a/locales/en.json
+++ b/locales/en.json
@@ -8,7 +8,7 @@
     "Home": {
         "greeting": "Hello everyone",
         "iam": "I'm",
-        "based": "Based on Yogyakarta, ID",
+        "based": "Based in Yogyakarta, ID",
         "introduction": "Experienced Full-stack Developer",
         "passion": "I am passionate about creating seamless web experiences. Specializing in building efficient, scalable, and engaging web applications, I focus on delivering digital solutions that are not only functional but also visually appealing",
         "motto": "Bringing digital dreams to life",
