feat: add "open opportunities"  section homepage

--- a/locales/id.json
+++ b/locales/id.json
@@ -12,6 +12,7 @@
         "introduction": "Full-stack Developer Berpengalaman",
         "passion": "Saya memiliki passion dalam menciptakan pengalaman web yang luar biasa. Dengan keahlian dalam mengembangkan aplikasi web yang efisien, skalabel, dan responsif, saya berfokus pada menciptakan solusi digital yang tak hanya fungsional tetapi juga menarik",
         "motto": "Mewujudkan impian digital",
+        "openToOpportunities": "Terbuka untuk kesempatan menarik",
         "collaboration": "Mari bekerja sama!",
         "freelance": "Saya terbuka untuk proyek freelance, jangan ragu untuk mengirim email kepada saya untuk melihat bagaimana kita bisa berkolaborasi.",
         "getInTouch": "Hubungi Saya",
