--- a/locales/en.json
+++ b/locales/en.json
@@ -12,6 +12,7 @@
         "introduction": "Experienced Full-stack Developer",
         "passion": "I am passionate about creating seamless web experiences. Specializing in building efficient, scalable, and engaging web applications, I focus on delivering digital solutions that are not only functional but also visually appealing",
         "motto": "Bringing digital dreams to life",
+        "openToOpportunities": "Open to exciting opportunities",
         "collaboration": "Let's collaborate!",
         "freelance": "I'm open for freelance work. Don't hesitate to contact me if you want to work together.",
         "getInTouch": "Get in Touch",
