optimize: lcp homepage shorter passion text

--- a/locales/id.json
+++ b/locales/id.json
@@ -10,7 +10,7 @@
         "iam": "Saya",
         "based": "Berdomisili di Jogja, ID",
         "introduction": "Full-stack Developer Berpengalaman",
-        "passion": "Saya memiliki passion dalam menciptakan pengalaman web yang luar biasa. Dengan keahlian dalam mengembangkan aplikasi web yang efisien, skalabel, dan responsif, saya berfokus pada menciptakan solusi digital yang tak hanya fungsional tetapi juga menarik",
+        "passion": "Saya antusias menciptakan pengalaman web yang luar biasa dengan membangun aplikasi efisien, skalabel, dan responsif, serta solusi digital yang menarik dan fungsional.",
         "motto": "Mewujudkan impian digital",
         "openToOpportunities": "Terbuka untuk kesempatan menarik",
         "collaboration": "Mari bekerja sama!",
