optimize: lcp homepage passion text

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
         "iam": "I'm",
         "based": "Based in Yogyakarta, ID",
         "introduction": "Experienced Full-stack Developer",
-        "passion": "I’m passionate crafting exceptional web experiences by building efficient, scalable, and engaging applications with functional and visually appealing digital solutions.",
+        "passion": "I’m passionate crafting exceptional web experiences by building efficient, scalable with functional and visually appealing digital solutions.",
         "motto": "Bringing digital dreams to life",
         "openToOpportunities": "Open to exciting opportunities",
         "collaboration": "Let's collaborate!",
