--- a/locales/id.json
+++ b/locales/id.json
@@ -10,7 +10,7 @@
         "iam": "Saya",
         "based": "Berdomisili di Jogja, ID",
         "introduction": "Full-stack Developer Berpengalaman",
-        "passion": "Saya antusias menciptakan pengalaman web yang luar biasa dengan membangun aplikasi efisien, skalabel, dan responsif, serta solusi digital yang menarik dan fungsional.",
+        "passion": "Saya antusias menciptakan pengalaman web yang luar biasa dengan membangun aplikasi efisien, skalabel serta solusi digital yang fungsional.",
         "motto": "Mewujudkan impian digital",
         "openToOpportunities": "Terbuka untuk kesempatan menarik",
         "collaboration": "Mari bekerja sama!",
